# defect-detect

./: CMakeLists.txt  main.cpp
